--- a/index.html
+++ b/index.html
@@ -2,20 +2,76 @@
 <html>
 <head>
     <title>The AJAXson 5</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Averia+Sans+Libre:300,300i,400,400i,700,700i" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="request-gif.js"></script>
 </head>
 <body>
-    <h1>The AJAXson 5</h1>
+    <!--Header for Page-->
+    <header>
+        <h1 id="main">The AJAXson 5</h1>
+    </header>
 
-    <form id="form-gif-request" />
-        <label>What kind of Jackson 5 related gif do you want?</label>
-        <input name="tag" type="text"/>
-        <input type="submit" value="Get my Gif!" />
-    </form>
+    <section>
+        <form>
+            <button id="reset-button" value="Reset">Try Again!</button>
+        </form>
+        <form id="form-gif-request">
+        <div class="container-fluid" id="tagging">
+            <!--Contains tag input-->
+        <div class="row">
+            <div class="col-md-12" id="tag-label"><label class="text-center">What kind of Jackson 5 related gif do you want?</label></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="tag-input"><input id="tag" name="tag" type="text" class="text-center"/></div>
+        </div>
+        </div>
 
-    <img id="gif" src="" hidden="true"/>
-    <p id="feedback" hidden="true`"></p>
+        <div class="container-fluid" id="validation">
+            <!--contains validation-->
+        <div class="row">
+            <div class="col-md-12" id="prove"><span class="text-center">Prove you are not a robot by anwering this riddle:</span></div>
+        </div>
+            <div class="row captcha-class">
+            <div id="captcha-input" class="col-md-12"><input id="captcha" name="captcha" type="number" class="text-center"/> <span id="captcha-label"> Jacksons are better than 1.</span></div>
+
+            </div>
+        </div>
+            <!--submit button-->
+            <input id="submit" type="submit" value="Gif Me Please!" class="text-center"/>
+            <!--button to reset page-->
+        </form>
+
+        </div>
+    </section>
+
+    <br>
+    <hr hidden="true">
+    <br>
+
+    <section>
+        <div class="container-fluid">
+            <!--contains loading message-->
+        <div class="row">
+        <div class="loader col-md-12 text-center" id="loader"></div>
+        </div>
+            <!--contains gif-->
+        <div class="row">
+        <div class="col-md-12" id="gif-div"><img id="gif" src="" class="img-responsive center-block img-rounded" hidden="true"/></div>
+        </div>
+            <!--contains feedback (error)-->
+        <div class="row">
+        <div class="col-md-12" id="feed-div"><p id="feedback" class="text-center" hidden="true"></p></div>
+        </div>
+        </div>
+    </section>
+
+    <!--footer for the page-->
+<footer>
+</footer>
 
 </body>
 </html>
